Journal 1 marked by Adam.

--- a/My first research journal MaximilianHeyne.ipynb
+++ b/My first research journal MaximilianHeyne.ipynb
@@ -32,6 +32,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<span style=\"color: red;\"> Okay but very broad. Try and state the goal of the research project. </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 2: What? (What happened?)\n",
     "## Describe what happened during your activities for the week.\n",
     "\n",
@@ -78,11 +85,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<span style=\"color: red;\"> Good </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 3: So what? (What does it mean?)\n",
     "## Describe your results\n",
     "\n",
     "The plot shows similarities with the one from the paper [2], but it is still too imprecise to clearly differentiate, for example, the levels of redshift. It also does not include observational data from the JWST.\n",
     "Here, more work is required to create a properly comparable plot, which will involve working with formulas 7 & 8 from the paper. [2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color: red;\"> Describe exactly what you are plotting here. What are the axes? What does the data tell you? Did you expect it? </span>"
    ]
   },
   {
@@ -109,6 +130,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<span style=\"color: red;\"> good! </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 5. Bibliography\n",
     "\n",
     "[1]https://www.doc.ic.ac.uk/~wjk/UnixIntro/\n",
@@ -117,10 +145,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "<span style=\"color: red;\"> Use proper citation formatting. </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Category       | Points      |\n",
+    "| ------------- |:------------:|\n",
+    "| Formatting    |       2       |\n",
+    "| Experience    |       1       |\n",
+    "| What?         |       2       |\n",
+    "| So what?      |       2       |\n",
+    "| Now what?     |       4       |\n",
+    "| Bibliography  |       2       |\n",
+    "| Style         |       3       |\n",
+    "| Total         |       16      |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
