journal 2 marked by adam.

--- a/My second research journal Maximilian Heyne.ipynb
+++ b/My second research journal Maximilian Heyne.ipynb
@@ -34,6 +34,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<span style=\"color: red;\"> Good. Add to your motivation more about the overall aim of the research. What do you intend to use the supercomputer to do exactly? </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 2: What? (What happened?)\n",
     "\n",
     "\n",
@@ -222,6 +229,13 @@
     "Therefore, we expect that a lower wind velocity would lead to bigger SMBHs.\n",
     "\n",
     "We have also been working with Gadget-4, which is a parallel cosmological N-body and SPH code designed to simulate cosmic structure formation and calculations relevant for galaxy evolution and galactic dynamics. But we did not get it to work yet on the Niagara cluster, so we have to see if we can reproduce some of the values in the next week to compare them to our results."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color: red;\"> Good explanation. </span>"
    ]
   },
   {
@@ -443,6 +457,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<span style=\"color: red;\"> Nice plots. Please add descriptions of each and what they mean. </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 4. Now what? (What's next?)\n",
     "\n",
     "\n",
@@ -461,11 +482,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<span style=\"color: red;\"> okay. Try and tie this back to an overall motivation. Why are these important next steps in view of your research aims? </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 5. Bibliography\n",
     "\n",
     "\n",
     "https://arxiv.org/pdf/1911.05791"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color: red;\"> Please cite using an accepting citation format. </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Category       | Points      |\n",
+    "| ------------- |:------------:|\n",
+    "| Formatting    |       2       |\n",
+    "| Experience    |       2       |\n",
+    "| What?         |       1       |\n",
+    "| So what?      |       3       |\n",
+    "| Now what?     |       3       |\n",
+    "| Bibliography  |       1       |\n",
+    "| Style         |       3       |\n",
+    "| Total         |       15      |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
