--- a/My third research journal Maximilian Heyne.ipynb
+++ b/My third research journal Maximilian Heyne.ipynb
@@ -28,7 +28,9 @@
     "# Motivation\n",
     "\n",
     "\n",
-    "For me, the motivation in the last couple of weeks was to understand more about the effects that cause black hole growth in the early universe and also to be able to write a program that creates graphs that better express the results we got from our simulation. I also wanted to get more knowledge about the Gadget-4 code and reproduce some data with it. Therefore, I have been reading the documentation for Gadget-4 and also looking into a paper about black hole growth from D. M. Alexander and R. C. Hickox, 2024[1]."
+    "For me, the motivation in the last couple of weeks has been to understand more about the effects that cause black hole growth in the early universe in general (see Ref[1]) and radiative efficiency in particular. Therefore, I have been reading a paper (see Ref[2]) about the radiative efficiency of black holes, what it is, and how it influences black hole growth. I have also been reading more about how data binning works to process the data from the simulation in such a way that it expresses the results more clearly (see Ref[3]).\n",
+    "\n",
+    "Additionally, I wanted to gain more knowledge about the Gadget-4 code and reproduce some data with it. Therefore, I have been reading more in the documentation for Gadget-4 (see Ref[4]) and working together with our tutor, Anirudh.\n"
    ]
   },
   {
@@ -163,34 +165,70 @@
     "   - Other simulations: Wind Energy 0.2, Eddington Limit 5, Wind Velocity 50, and then Radiative Efficiency 0.2, 0.1, 0.05, and 0.01\n",
     "\n",
     "\n",
-    "![StellarBhmassRadEffBinRS6.png](attachment:StellarBhmassRadEffBinRS6.png)\n",
-    "![StellarHalomassRadEffBinRS6.png](attachment:StellarHalomassRadEffBinRS6.png)\n",
     "\n",
+    "![StellarBhmassRadEffBinRS6.png](attachment:StellarBhmassRadEffBinRS6.png)\n",
+    "\n",
+    "*Figure 1: Stellar mass (log) vs Blackhole Mass (log) for the Radiative Efficiency at z = 6 (redshift), for radiative efficiency of blue = 0.2(default no changes to the parameters), orange = 0.2, green = 0.1, red = 0.05 and violet = 0.01 with changes in parameter of Wind Energy 0.2, Eddington Limit 5, Wind Velocity 50*\n",
     "\n",
     "![StellarBhmassRadEffBinRS3.png](attachment:StellarBhmassRadEffBinRS3.png)\n",
-    "![StellarHalomassRadEffBinRS3.png](attachment:StellarHalomassRadEffBinRS3.png)\n",
     "\n",
+    "*Figure 2: Stellar mass (log) vs Blackhole Mass (log) for the Radiative Efficiency at z = 3 (redshift), for radiative efficiency ofblue = 0.2(default no changes to the parameters), orange = 0.2, green = 0.1, red = 0.05 and violet = 0.01 with changes in parameter of Wind Energy 0.2, Eddington Limit 5, Wind Velocity 50*\n",
     "\n",
     "![StellarBhmassRadEffBinRS2.png](attachment:StellarBhmassRadEffBinRS2.png)\n",
-    "![StellarHalomassRadEffBinRS2.png](attachment:StellarHalomassRadEffBinRS2.png)\n",
     "\n",
-    " \n",
-    "![StellarBhmassRadEffBinRS1.png](attachment:StellarBhmassRadEffBinRS1.png) \n",
-    "![StellarHalomassRadEffBinRS1.png](attachment:StellarHalomassRadEffBinRS1.png)\n",
+    "*Figure 3: Stellar mass (log) vs Blackhole Mass (log) for the Radiative Efficiency at z = 2 (redshift), for radiative efficiency of blue = 0.2(default no changes to the parameters), orange = 0.2, green = 0.1, red = 0.05 and violet = 0.01 with changes in parameter of Wind Energy 0.2, Eddington Limit 5, Wind Velocity 50*\n",
     "\n",
+    "![StellarBhmassRadEffBinRS1.png](attachment:StellarBhmassRadEffBinRS1.png)\n",
+    "\n",
+    "*Figure 4: Stellar mass (log) vs Blackhole Mass (log) for the Radiative Efficiency at z = 1 (redshift), for radiative efficiency of blue = 0.2(default no changes to the parameters), orange = 0.2, green = 0.1, red = 0.05 and violet = 0.01 with changes in parameter of Wind Energy 0.2, Eddington Limit 5, Wind Velocity 50*\n",
     "\n",
     "![StellarBhmassRadEffBinRS0.png](attachment:StellarBhmassRadEffBinRS0.png)\n",
+    "\n",
+    "*Figure 5: Stellar mass (log) vs Blackhole Mass (log) for the Radiative Efficiency at z = 0 (redshift), for radiative efficiency of blue = 0.2(default no changes to the parameters), orange = 0.2, green = 0.1, red = 0.05 and violet = 0.01 with changes in parameter of Wind Energy 0.2, Eddington Limit 5, Wind Velocity 50*\n",
+    "\n",
+    "\n",
+    "Figure 1-5 show the increas of Black hole mass and stellar mass for lower values of the radiative efficiency growing larger for lower redshifts (z = 6 to z = 0). The plots where made by using 10 bins which causes the z = 6 graph to be a bit more confuse. With higher redshifts the differnece between the radiative efficency values becomes more pronown.\n",
+    "\n",
+    "\n",
+    "![StellarHalomassRadEffBinRS6.png](attachment:StellarHalomassRadEffBinRS6.png)\n",
+    "\n",
+    "*Figure 6: Stellar mass (log) vs Halo Mass (log) for the Radiative Efficiency at z = 6 (redshift), for radiative efficiency of blue = 0.2(default no changes to the parameters), orange = 0.2, green = 0.1, red = 0.05 and violet = 0.01 with changes in parameter of Wind Energy 0.2, Eddington Limit 5, Wind Velocity 50*\n",
+    "The use of 10 bins provides a better overview. There is an increase in stellar mass and halo mass for lower radiative efficiency (0.01 violet) at z = 6, but the values are still quite confusing which makes a real prediction difficult.\n",
+    "\n",
+    "\n",
+    "![StellarHalomassRadEffBinRS3.png](attachment:StellarHalomassRadEffBinRS3.png)\n",
+    "\n",
+    "*Figure 7: Stellar mass (log) vs Halo Mass (log) for the Radiative Efficiency at z = 3 (redshift), for radiative efficiency of blue = 0.2(default no changes to the parameters), orange = 0.2, green = 0.1, red = 0.05 and violet = 0.01 with changes in parameter of Wind Energy 0.2, Eddington Limit 5, Wind Velocity 50*\n",
+    "Here, the picture is clearer due to more data points. However, the default version with no change in parameters seems to have a higher halo mass than the others at z = 3, as seen in blue. We also used 10 bins for this graph.\n",
+    "\n",
+    "\n",
+    "![StellarHalomassRadEffBinRS2.png](attachment:StellarHalomassRadEffBinRS2.png)\n",
+    "\n",
+    "*Figure 8: Stellar mass (log) vs Halo Mass (log) for the Radiative Efficiency at z = 2 (redshift), for radiative efficiency of blue = 0.2(default no changes to the parameters), orange = 0.2, green = 0.1, red = 0.05 and violet = 0.01 with changes in parameter of Wind Energy 0.2, Eddington Limit 5, Wind Velocity 50*\n",
+    "This figure shows a slightly different picture. At the beginning, the default value of 0.2 in blue increases the most in both halo and stellar mass, but in the end, the 0.2 value in orange gives the highest values for both stellar and halo mass. These values also used 10 bins and show the data at z = 2.\n",
+    "\n",
+    "\n",
+    "![StellarHalomassRadEffBinRS1.png](attachment:StellarHalomassRadEffBinRS1.png)\n",
+    "\n",
+    "*Figure 9: Stellar mass (log) vs Halo Mass (log) for the Radiative Efficiency at z = 1 (redshift), for radiative efficiency of blue = 0.2(default no changes to the parameters), orange = 0.2, green = 0.1, red = 0.05 and violet = 0.01 with changes in parameter of Wind Energy 0.2, Eddington Limit 5, Wind Velocity 50*\n",
+    "This figure shows that the default (0.2, blue) value gives us the highest halo and stellar mass at z = 0, using 10 bins.\n",
+    "\n",
+    "\n",
     "![StellarHalomassRadEffBinRS0.png](attachment:StellarHalomassRadEffBinRS0.png)\n",
-    " \n",
+    "\n",
+    "*Figure 10: Stellar mass (log) vs Halo Mass (log) for the Radiative Efficiency at z = 0 (redshift), for radiative efficiency of blue = 0.2(default no changes to the parameters), orange = 0.2, green = 0.1, red = 0.05 and violet = 0.01 with changes in parameter of Wind Energy 0.2, Eddington Limit 5, Wind Velocity 50*\n",
+    "At z = 0, the plot provides a clearer view due to more data points, resulting in a low redshift and the use of 10 bins. Here, the blue 0.2 default dominates at the beginning, then gets surpassed by the 0.01 in violet, and in the end, the 0.1 value in green has the highest stellar and halo mass.\n",
     " \n",
     "\n",
     "\n",
-    "From the images, we can see an increased black hole mass, which is great news!\n",
+    "From the first 5 images, we can see an increased black hole mass, which is great news!\n",
     "That shows that the parameters we changed have an impact on black hole growth as we were expecting.\n",
+    "For the figures 6-10, it is hard to make a definitive prediction about the halo mass and stellar mass due to the variability across graphs. There might be a slight advantage for the default, but further work is needed to confirm this conclusively.\n",
+    "\n",
     "Now we have to figure out how each value corresponds to the change in black hole growth and also compare it to observational data.\n",
     "This will be the task for the coming weeks so we can present the full picture of our research at the end.\n",
     "\n",
-    "Gadget-4 is still having trouble compiling and getting it to work properly; this will also be a task for the upcoming weeks."
+    "Gadget-4 is still having trouble compiling and getting it to work properly, this will also be a task for the upcoming weeks."
    ]
   },
   {
@@ -200,11 +238,11 @@
     "# 4. Now what? (What's next?)\n",
     "\n",
     "\n",
-    "For the upcoming weeks, we have quite a few things to do:\n",
+    "For the upcoming weeks, we want to specify more clearly which parameter has what effect on black hole growth. Therefore, we want to run the simulations again with default values and only change one parameter (Eddington limit, wind energy, radiative efficiency) at a time. All the simulations will also include data for the redshift down to zero (z = 0), to give us more data and make the results clearer. This, in turn, will hopefully give us a more precise overview of the influence of the Eddington limit, wind energy, and radiative efficiency on black hole growth.\n",
     "\n",
-    "- Include observational data from a paper [2] from JWST into the above shown graphs for redshifts 3, 2, and 1.\n",
+    "- Include observational data from a paper (see Ref[5]) from JWST into the above shown graphs for redshifts 3, 2, and 1.\n",
     "\n",
-    "- Include simulation data from another paper [3] into the above shown graphs for redshift z < 6 down to 0.\n",
+    "- Include simulation data from another paper (see Ref[6]) into the above shown graphs for redshift z < 6 down to 0.\n",
     "\n",
     "- Run a simulation down to redshift 0 with default parameters besides a change in the Eddington limit of 2, 3, 4, and 5, and add the above observational data and simulation data from the papers.\n",
     "\n",
@@ -221,10 +259,17 @@
    "source": [
     "# 5. Bibliography\n",
     "\n",
+    "[1] Alexander, D. M., & Hickox, R. C. (2012). What drives the growth of black holes?. New Astronomy Reviews, 56(4), 93-121.\n",
     "\n",
-    "[1] https://arxiv.org/pdf/1112.1949\n",
-    "[2] https://arxiv.org/pdf/2404.05793\n",
-    "[3] https://arxiv.org/pdf/1806.07893"
+    "[2] Narzilloev, B., Abdujabbarov, A., Ahmedov, B., & Bambi, C. (2024). Observed jet power and radiative efficiency of black hole candidates in the Kerr+ PFDM model. The European Physical Journal C, 84(9), 909.\n",
+    "\n",
+    "[3] https://www.geeksforgeeks.org/binning-data-in-python-with-scipy-numpy/\n",
+    "\n",
+    "[4] Springel, V. (2000). GADGET-4.\n",
+    "\n",
+    "[5] Mezcua, M., Pacucci, F., Suh, H., Siudek, M., & Natarajan, P. (2024). Overmassive black holes at cosmic noon: Linking the local and the high-redshift Universe. The Astrophysical Journal Letters, 966(2), L30.\n",
+    "\n",
+    "[6] Behroozi, P., Wechsler, R. H., Hearin, A. P., & Conroy, C. (2019). UniverseMachine: The correlation between galaxy growth and dark matter halo assembly from z= 0− 10. Monthly Notices of the Royal Astronomical Society, 488(3), 3143-3194."
    ]
   }
  ],
