--- a/My third research journal Maximilian Heyne.ipynb
+++ b/My third research journal Maximilian Heyne.ipynb
@@ -271,13 +271,55 @@
     "\n",
     "[6] Behroozi, P., Wechsler, R. H., Hearin, A. P., & Conroy, C. (2019). UniverseMachine: The correlation between galaxy growth and dark matter halo assembly from z= 0− 10. Monthly Notices of the Royal Astronomical Society, 488(3), 3143-3194."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Grading\n",
+    "\n",
+    "| Category       | Points      |\n",
+    "| ------------- |:------------:|\n",
+    "| Formatting    |       2 / 2       |\n",
+    "| Experience    |       2 / 2       |\n",
+    "| What?         |       2 / 2       |\n",
+    "| So what?      |       4 / 4       |\n",
+    "| Now what?     |       4 / 4       |\n",
+    "| Bibliography  |       3 / 3       |\n",
+    "| Style         |       3 / 3       |\n",
+    "| Total         |       20 / 20     |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Additional comments\n",
+    "To format code in markdown, you can use 3 ` as an enclosing group. This looks like this: ```bin_data()```.\n",
+    "\n",
+    "Great work!"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
